templates/renterd_template.yaml
---
# Source: renterd/charts/mysql/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: mysql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    app.kubernetes.io/version: 8.0.36
    helm.sh/chart: mysql-10.1.1
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: mysql
      app.kubernetes.io/version: 8.0.36
      helm.sh/chart: mysql-10.1.1
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 3306
        - port: 3306
---
# Source: renterd/charts/mysql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  namespace: "default"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    app.kubernetes.io/version: 8.0.36
    helm.sh/chart: mysql-10.1.1
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: mysql
    app.kubernetes.io/component: primary
---
# Source: renterd/charts/mysql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    app.kubernetes.io/version: 8.0.36
    helm.sh/chart: mysql-10.1.1
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
      nodePort: null
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: mysql
    app.kubernetes.io/component: primary
---
# Source: renterd/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: renterd-bus
  labels:
    helm.sh/chart: renterd-1.1.3
    app.kubernetes.io/name: renterd
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.6"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9980
      targetPort: 9980
      protocol: TCP
      name: http
    - port: 9981
      targetPort: 9981
      protocol: TCP
      name: bus
  selector:
    app.kubernetes.io/name: renterd
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: bus
---
# Source: renterd/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: renterd-autopilot
  labels:
    helm.sh/chart: renterd-1.1.3
    app.kubernetes.io/name: renterd
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.6"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9980
      targetPort: 9980
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: renterd
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: autopilot
---
# Source: renterd/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: renterd-worker
  labels:
    helm.sh/chart: renterd-1.1.3
    app.kubernetes.io/name: renterd
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.6"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9980
      targetPort: 9980
      protocol: TCP
      name: http
    - port: 9981
      targetPort: 9981
      protocol: TCP
      name: bus
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: s3
  selector:
    app.kubernetes.io/name: renterd
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: worker
---
# Source: renterd/templates/statefulset-renterd-autopilot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: renterd-autopilot
  labels:
    helm.sh/chart: renterd-1.1.3
    app.kubernetes.io/name: renterd
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.6"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: autopilot
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: renterd
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: autopilot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: renterd
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: autopilot
      annotations:
        checksum/configmap-renterd: ec4a66a21d16a340474ed3f44b402012a53db72089a36bcbb21595d73dbadb61
        checksum/configmap-renterd-autopilot: ab2c4c953c6fc15956ef6fb3a5a29da4e7309e6ef198f91654e4117a73ce695c
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
      containers:
        - name: renterd
          image: "ghcr.io/siafoundation/renterd:1.0.6"
          imagePullPolicy: IfNotPresent
          ports:
            - name: bus
              containerPort: 9981
              protocol: TCP
            - name: http
              containerPort: 9980
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 9980
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9980
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            # Autopilot does not save anything other than logs on /data
            - mountPath: "/data"
              name: renterd-data-emptydir
            - mountPath: "/data/renterd.yml"
              name: renterd-autopilot-config
              subPath: "renterd.yml"
            - mountPath: "/entrypoint.sh"
              name: renterd-config
              subPath: "entrypoint.sh"
          resources:
            {}
      volumes:
        - name: renterd-config
          configMap:
            name: renterd
            defaultMode: 0755
        - name: renterd-autopilot-config
          configMap:
            name: renterd-autopilot
            defaultMode: 0755
        # renterd is currently lacking an option to disable logging to file, so it needs a space to write logs.
        # As we now do not run renterd as root, I created a small in-memory volume and k8s securityContext.fsGroup sets permissions on it.
        # Issue: https://github.com/SiaFoundation/renterd/issues/1017
        - name: renterd-data-emptydir
          emptyDir:
            medium: "Memory"
            sizeLimit: 128Mi
---
# Source: renterd/charts/mysql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    app.kubernetes.io/version: 8.0.36
    helm.sh/chart: mysql-10.1.1
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  podManagementPolicy: ""
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: mysql
      app.kubernetes.io/component: primary
  serviceName: mysql
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configuration: 1e69c2509c82b2f9c44a2ab48f341af6454bb07914c722ae5c98afd7719516ba
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mysql
        app.kubernetes.io/version: 8.0.36
        helm.sh/chart: mysql-10.1.1
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: mysql
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/name: mysql
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: mysql
          image: docker.io/bitnami/mysql:8.0.36-debian-12-r10
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: mysql
              containerPort: 3306
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          startupProbe:
            failureThreshold: 10
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          resources: 
            requests:
              cpu: 250m
              memory: 3072Mi
          volumeMounts:
            - name: data
              mountPath: /bitnami/mysql
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/mysql/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/mysql/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/mysql/logs
              subPath: app-logs-dir
            - name: config
              mountPath: /opt/bitnami/mysql/conf/my.cnf
              subPath: my.cnf
      volumes:
        - name: config
          configMap:
            name: mysql
        - name: empty-dir
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app.kubernetes.io/instance: release-name
          app.kubernetes.io/name: mysql
          app.kubernetes.io/component: primary
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: renterd/templates/statefulset-renterd-bus.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: renterd-bus
  labels:
    helm.sh/chart: renterd-1.1.3
    app.kubernetes.io/name: renterd
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.6"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: bus
spec:
  serviceName: "renterd-bus"
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: renterd
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: bus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: renterd
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: bus
      annotations:
        checksum/configmap-renterd: ec4a66a21d16a340474ed3f44b402012a53db72089a36bcbb21595d73dbadb61
        checksum/configmap-renterd-bus: 9fa295e2b81943af193fcb3d401846a83167d4338d235da0c93544bb7f46671f
        checksum/secret-renterd-mysql: ef9fe27343bc9bd850ad530659bc5bb89361a44d68711681f8f20d11e22bf18f
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
      containers:
        - name: renterd
          image: "ghcr.io/siafoundation/renterd:1.0.6"
          imagePullPolicy: IfNotPresent
          ports:
            - name: bus
              containerPort: 9981
              protocol: TCP
            - name: http
              containerPort: 9980
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 9980
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9980
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: "/data"
              name: renterd-bus-data
            - mountPath: "/data/renterd.yml"
              name: renterd-bus-config
              subPath: "renterd.yml"
            - mountPath: "/entrypoint.sh"
              name: renterd-config
              subPath: "entrypoint.sh"
          resources:
            {}
      volumes:
        - name: renterd-config
          configMap:
            name: renterd
            defaultMode: 0755
        - name: renterd-bus-config
          configMap:
            name: renterd-bus
            defaultMode: 0755
  volumeClaimTemplates:
    - metadata:
        name: renterd-bus-data
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: longhorn
---
# Source: renterd/templates/statefulset-renterd-worker.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: renterd-worker
  labels:
    helm.sh/chart: renterd-1.1.3
    app.kubernetes.io/name: renterd
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.6"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: worker
spec:
  serviceName: "renterd-worker"
  replicas: 1
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app.kubernetes.io/name: renterd
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: renterd
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: worker
      annotations:
        checksum/configmap-renterd: ec4a66a21d16a340474ed3f44b402012a53db72089a36bcbb21595d73dbadb61
        checksum/configmap-renterd-worker: 71e95f828a634fb129511b8287b863eafde1cc0cc7eac1f21d820d704942a0b4
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
      containers:
        - name: renterd
          image: "ghcr.io/siafoundation/renterd:1.0.6"
          imagePullPolicy: IfNotPresent
          ports:
            - name: bus
              containerPort: 9981
              protocol: TCP
            - name: http
              containerPort: 9980
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 9980
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9980
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: "/data"
              name: renterd-data-emptydir
            - mountPath: "/data/renterd.yml"
              name: renterd-worker-config
              subPath: "renterd.yml"
            - mountPath: "/entrypoint.sh"
              name: renterd-config
              subPath: "entrypoint.sh"
          resources:
            {}
      volumes:
        - name: renterd-config
          configMap:
            name: renterd
            defaultMode: 0755
        - name: renterd-worker-config
          configMap:
            name: renterd-worker
            defaultMode: 0755
        # renterd is currently lacking an option to disable logging to file, so it needs a space to write logs.
        # As we now do not run renterd as root, I created a small in-memory volume and k8s securityContext.fsGroup sets permissions on it.
        # Issue: https://github.com/SiaFoundation/renterd/issues/1017
        - name: renterd-data-emptydir
          emptyDir:
            medium: "Memory"
            sizeLimit: 128Mi
